--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,14 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
+    "source-map-explorer": "^1.6.0",
     "truffle-contract": "^4.0.0-beta.1",
     "web3": "^1.0.0-beta.36"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "analyze": "source-map-explorer build/static/js/main.*",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
