--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "homepage": "http://crisplnk.com",
   "dependencies": {
+    "@types/jest": "^23.3.12",
+    "@types/node": "^10.12.18",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
     "gh-pages": "^2.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.3",
     "source-map-explorer": "^1.6.0",
     "truffle-contract": "^4.0.0-beta.1",
+    "typescript": "^3.2.2",
     "web3": "^1.0.0-beta.36"
   },
   "scripts": {
