--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,14 @@
     "@types/node": "^10.12.18",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/react-redux": "^6.0.12",
     "@types/web3": "^1.0.14",
     "gh-pages": "^2.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
     "react-scripts": "^2.1.3",
+    "redux": "^4.0.1",
     "source-map-explorer": "^1.6.0",
     "truffle-contract": "^4.0.0-beta.1",
     "typescript": "^3.2.2",
